2006-09-18  Thiemo Seufer  <ths@networkno.de>

	* ld-elfcomm/elfcomm.exp: Enable the alignment test for
	mips*-*-*.

2006-09-17  Mei Ligang  <ligang@sunnorth.com.cn>

	* ld-elf/merge.d: Add special case for Score target.
	* ld-elfcomm/elfcomm.exp: Likewise.
	* ld-srec/srec.exp: Likewise.

2006-09-15  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-scripts/overlay-size.t: Discard .reginfo sections.

2006-09-15  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/hash.d: Don't run for mips targets.

2006-09-15  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/loadaddr.s: Pad sections to 16 bytes.
	* ld-elf/loadaddr1.d: Updated.
	* ld-elf/loadaddr2.d: Likewise.
	* ld-elf/loadaddr3a.d: Likewise.
	* ld-elf/loadaddr3b.d: Likewise.

2006-09-12  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/3197
	* ld-elf/hash.d: New test.

2006-09-04  Vladimir Prus  <vladimir@codesourcery.com>

	* ld-arm/use-thumb-lib.sym: Use regexps instead of
	absolute addresses, for robustness.

2006-09-07  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/dl1.c: New file.
	* ld-elf/dl1.list: Likewise.
	* ld-elf/dl1.out: Likewise.
	* ld-elf/dl1main.c: Likewise.
	* ld-elf/dl2.c: Likewise.
	* ld-elf/dl2.list: Likewise.
	* ld-elf/dl2a.out: Likewise.
	* ld-elf/dl2b.out: Likewise.
	* ld-elf/dl2main.c: Likewise.
	* ld-elf/dl2xxx.c: Likewise.
	* ld-elf/dl2xxx.list: Likewise.
	* ld-elf/dl3.cc: Likewise.
	* ld-elf/dl3.list: Likewise.
	* ld-elf/dl3a.out: Likewise.
	* ld-elf/dl3b.out: Likewise.
	* ld-elf/dl3header.h: Likewise.
	* ld-elf/dl3main.cc: Likewise.

	* ld-elf/shared.exp: Updated.

	* lib/ld-lib.exp (run_ld_link_exec_tests): Take an optional
	argument for source language. Use CC/CXX for link, depending
	on source language.
	(run_cc_link_tests): Likewise.

2006-08-29  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/loadaddr3a.d: Adjust target test.
	* ld-elf/loadaddr3b.d: Likewise.

2006-08-29  Nathan Sidwell  <nathan@codesourcery.com>

	* ld-elf/loadaddr3.t: New.
	* ld-elf/loadaddr3a.d: New.
	* ld-elf/loadaddr3b.d: New.
